--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Minha página de teste</title>
+   <p>
+  Estou criando um link para
+  <a href="https://www.mozilla.org/pt-BR/">a página inicial da Mozilla</a>.
+</p>
   </head>
   <body>
     <img src="images/firefox-icon.png" alt="minha página de teste" />
