--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-   <p>
-  Estou criando um link para
-  <a href="https://www.mozilla.org/pt-BR/">a página inicial da Mozilla</a>.
-</p>
   </head>
-  <body>
-    <img src="images/firefox-icon.png" alt="minha página de teste" />
-  </body>
+ Estou criando um link para
+  <a href="https://3.129.39.117">a página inicial da Mozilla</a>.
+</p>
 </html>
