--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width" />
   </head>
  Estou criando um link para
-  <a href="http://3.129.39.117/login/index.php">a página inicial da Mozilla</a>.
+  <a href="http://3.129.39.117/login/index.php">Portal Aulas</a>.
 </p>
 </html>
