--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="link-automatco" content="http://3.129.39.117/login/index.php">
   </head>
  Estou criando um link para
   <a href="http://3.129.39.117/login/index.php">Portal Aulas</a>.
