--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <title>Link Automático</title>
+    <!-- Definir a meta tag com o valor do link automático -->
     <meta name="link-automatco" content="http://3.129.39.117/login/index.php">
   </head>
- Estou criando um link para
-  <a href="http://3.129.39.117/login/index.php">Portal Aulas</a>.
-</p>
+ <body>
+    <!-- O link será preenchido automaticamente pelo valor da meta tag -->
+    <a id="meuLink" href="#" target="_blank">Link Automático</a>
+</body>
 </html>
