--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="link-automatco" content="http://3.129.39.117/login/index.php">
   </head>
  <body>
+   <meta name="link-automatco" content="http://3.129.39.117/login/index.php">
     <!-- O link será preenchido automaticamente pelo valor da meta tag -->
-    <a id="meuLink" href="#" target="_blank">Link Automático</a>
+    <a id="meuLink" href="#" target="_blank">Link-Automático</a>
 </body>
 </html>
