--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Link Automático</title>
-    <!-- Definir a meta tag com o valor do link automático -->
-    <meta name="link-automatco" content="http://3.129.39.117/login/index.php">
-  </head>
- <body>
-   <meta name="link-automatco" content="http://3.129.39.117/login/index.php">
-    <!-- O link será preenchido automaticamente pelo valor da meta tag -->
-    <a id="meuLink" href="#" target="_blank">Link-Automático</a>
+<head>
+    <title>Redirecionamento Automático</title>
+    <!-- Meta tag para redirecionamento automático -->
+    <meta http-equiv="refresh" content="0; URL=http://3.129.39.117/login/index.php">
+</head>
+<body>
+    <p>Esta página será redirecionada automaticamente para o link especificado.</p>
 </body>
 </html>
