--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirecionamento Automático</title>
-    <!-- Meta tag para redirecionamento automático -->
     <meta http-equiv="refresh" content="0; URL=http://3.144.248.255/login/index.php">
+    <title>Redirecionamento Automático</title>
 </head>
 <body>
+    <p>Por favor, aguarde enquanto você está sendo redirecionado...</p>
 </body>
 </html>
+
