--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     
     <nav>
         <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="http://3.144.248.255/login/index.php">Redirecionar para outra página</a></li>
         </ul>
     </nav>
     
@@ -26,5 +24,6 @@
     </footer>
 </body>
 </html>
+
 
 
