--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Redirecionando...</title>
-    <meta http-equiv="refresh" content="5;url=http://3.144.248.255/login/index.php">
+    <meta http-equiv="refresh" content="5;url=https://144.22.129.72/login/index.php">
 </head>
 <body>
     <p>Por favor, aguarde enquanto você está sendo redirecionado para outra página.</p>
-    <p>Se você não for redirecionado em 5 segundos, <a href="http://3.144.248.255/login/index.php">clique aqui</a>.</p>
+    <p>Se você não for redirecionado em 5 segundos, <a href="https://144.22.129.72/login/index.php">clique aqui</a>.</p>
 </body>
 </html>
 
